# Project20170907-FogComputing

./: README.md
openfog_ws/src/cfg/: InteriorOrientationFisheye0.yaml  MultiCamSys_Calibration.yaml  Slam_Settings_indoor1.yaml
openfog_ws/src/feature_analysis/: CMakeLists.txt  nodelet_feature_analysis.xml  nodelet_feature_extraction.xml  package.xml
openfog_ws/src/feature_analysis/include/: cMultiFrame.h  cSystem.h  cTracking.h  feature_analysis.h  feature_extraction.h
openfog_ws/src/feature_analysis/launch/: feature_analysis.launch  feature_extraction.launch
openfog_ws/src/feature_analysis/src/: cConverter.cpp  cLocalMapping.cpp  cLoopClosing.cpp  cMap.cpp  cMapPoint.cpp  cMapPublisher.cpp  cMultiFrame.cpp  cMultiFramePublisher.cpp  cMultiInitializer.cpp  cMultiKeyFrame.cpp  cMultiKeyFrameDatabase.cpp  cORBmatcher.cpp  cOptimizer.cpp  cOptimizerLoopStuff.cpp  cSim3Solver.cpp  cSystem.cpp  cTracking.cpp  cViewer.cpp  cam_system_omni.cpp  feature_analysis.cpp  feature_analysis_main (copy).cpp  feature_analysis_main.cpp  feature_extraction.cpp  feature_extraction_main.cpp  g2o_MultiCol_sim3_expmap.cpp  g2o_MultiCol_vertices_edges.cpp
openfog_ws/src/feature_extraction/: CMakeLists.txt  package.xml
openfog_ws/src/feature_extraction/include/: BriefExtractor.h  cam_model_omni.h  misc.h
openfog_ws/src/feature_extraction/msg/: Descriptor.msg
openfog_ws/src/feature_extraction/src/: BriefExtractor.cpp  cam_model_omni.cpp  feature_extraction_main.cpp  image_publisher_test.cpp
openfog_ws/src/fog_msgs/: CMakeLists.txt  package.xml
openfog_ws/src/fog_msgs/msg/: Features.msg  Keypoint.msg
openfog_ws/src/front_feature/: CMakeLists.txt  nodelet_front_feature.xml  package.xml
openfog_ws/src/front_feature/include/: feature_extraction.h
openfog_ws/src/front_feature/launch/: front_feature.launch
openfog_ws/src/front_feature/src/: cam_model_omni.cpp  feature_extraction.cpp  feature_extraction_main.cpp  mdBRIEFextractorOct.cpp  misc.cpp
